# nucleo-g491re-bare

./: .gitmodules  CMakeLists.txt  README.md  setup.sh  toolchain.cmake
src/: main.c
